mobile webview scrollbar css correction

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -392,16 +392,23 @@ ol li {
   position: sticky;
   top: 0;
   background-color: white;
+}
 
-  /* Hide scrollbar for Chrome, Safari, and Opera */
-  ::-webkit-scrollbar {
-    display: none;
-  }
+/* Hide scrollbar for Chrome, Safari, and Opera */
+.genre-bar::-webkit-scrollbar {
+  display: none;
+}
 
-  /* Hide scrollbar for IE, Edge, and Firefox */
+/* Hide scrollbar for IE and Edge */
+.genre-bar {
   -ms-overflow-style: none;  /* IE and Edge */
+}
+
+/* Hide scrollbar for Firefox */
+.genre-bar {
   scrollbar-width: none;  /* Firefox */
 }
+
 
 .genre-item {
   display: inline-block;
